--- a/FlagQuest/index.html
+++ b/FlagQuest/index.html
@@ -9,7 +9,7 @@
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', GTAG);
+    gtag('config', 'G-WLHZPZP72F');
     </script>
 
     <meta charset="UTF-8">
